@startuml

title __MINI-SHOPIFY-BACKEND's Class Diagram__\n

  namespace springboot {
    class springboot.Application {
    }
  }
  

  namespace springboot {
    namespace DTO {
      class springboot.DTO.ItemDTO {
      }
    }
  }
  

  namespace springboot {
    namespace DTO {
      class springboot.DTO.ShopDTO {
      }
    }
  }
  

  namespace springboot {
    namespace Repository {
      interface springboot.Repository.ItemRepository {
      }
    }
  }
  

  namespace springboot {
    namespace Repository {
      interface springboot.Repository.OwnerRepository {
      }
    }
  }
  

  namespace springboot {
    namespace Repository {
      interface springboot.Repository.ShopRepository {
      }
    }
  }
  

  namespace springboot {
    namespace Tests {
      class springboot.Tests.JPAOwnerRepositoryTest {
      }
    }
  }
  

  namespace springboot {
    namespace Tests {
      class springboot.Tests.JPAShopRepositoryTest {
      }
    }
  }
  

  namespace springboot {
    namespace controller {
      class springboot.controller.ShopController {
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Cart {
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.CartItem {
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Item {
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Owner {
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Shop {
      }
    }
  }
  

  springboot.Tests.JPAOwnerRepositoryTest o-- springboot.Repository.OwnerRepository : ownerRepository
  springboot.Tests.JPAOwnerRepositoryTest o-- springboot.model.Owner : userJohn
  springboot.Tests.JPAOwnerRepositoryTest o-- springboot.model.Owner : userTom
  springboot.controller.ShopController o-- springboot.Repository.ItemRepository : itemRepo
  springboot.controller.ShopController o-- springboot.Repository.ShopRepository : shopRepo
  springboot.controller.ShopController o-- springboot.Repository.OwnerRepository : userRepo
  springboot.model.Cart o-- springboot.model.Owner : owner
  springboot.model.CartItem o-- springboot.model.Cart : cart
  springboot.model.CartItem o-- springboot.model.Item : itemId
  springboot.model.Item o-- springboot.model.Shop : shop
  springboot.model.Owner o-- springboot.model.Cart : personalCart
  springboot.model.Shop o-- springboot.model.Owner : owner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
